# Snow_BMI_Fortran

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
bmi/: bmif.pc
data/: prec.csv  snow_model_test.cfg  tair.csv  test_prec.csv
notebooks/: ECSnow_PyMT.ipynb
scripts/: update_rpaths.sh
snow/: CMakeLists.txt  bmi_main.f90  bmisnowf.f90  functions.f  main.f  main.f90  snow.csv  snow_model.pc.cmake  snow_model_test.cfg  snowf.pc
snow/examples/: CMakeLists.txt  change_prec_adjust_factor_ex.f90  conflicting_instances_ex.f90  get_value_ex.f90  info_ex.f90  irf_ex.f90  set_value_ex.f90  snow_model_test.cfg  test1.cfg  test2.cfg  vargrid_ex.f90
snow/tests/: CMakeLists.txt  fixtures.f90  tair.csv  test.cfg  test_finalize.f90  test_get_component_name.f90  test_get_current_time.f90  test_get_end_time.f90  test_get_grid_rank.f90  test_get_grid_shape.f90  test_get_grid_size.f90  test_get_grid_type.f90  test_get_input_var_names.f90  test_get_output_var_names.f90  test_get_start_time.f90  test_get_time_step.f90  test_get_time_units.f90  test_get_value.f90  test_get_var_type.f90  test_get_var_units.f90  test_initialize.f90  test_set_value.f90  test_update.f90  test_update_frac.f90  test_update_until.f90
